<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="409dp"
        android:layout_height="58dp"
        android:fontFamily="cursive"
        android:paddingLeft="15sp"
        android:paddingRight="1sp"
        android:text="@string/heading"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingStart="15sp"
        android:paddingEnd="1sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="101dp"
        android:layout_height="27dp"
        android:paddingLeft="5sp"
        android:text="@string/subheading"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.948"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView"
        app:layout_constraintVertical_bias="0.063" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="405dp"
        android:layout_height="610dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/grid" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="416dp"
        android:layout_height="407dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="PlayerTap"
                android:paddingLeft="6sp"
                android:paddingTop="6sp"
                android:paddingRight="6sp"
                android:paddingBottom="6sp"
                android:tag="0" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="PlayerTap"
                android:paddingLeft="6sp"
                android:paddingTop="6sp"
                android:paddingRight="6sp"
                android:paddingBottom="6sp"
                android:tag="1" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="PlayerTap"
                android:paddingLeft="6sp"
                android:paddingTop="6sp"
                android:paddingRight="6sp"
                android:paddingBottom="6sp"
                android:tag="2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="PlayerTap"
                android:paddingLeft="6sp"
                android:paddingTop="6sp"
                android:paddingRight="6sp"
                android:paddingBottom="6sp"
                android:tag="3" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="PlayerTap"
                android:paddingLeft="6sp"
                android:paddingTop="6sp"
                android:paddingRight="6sp"
                android:paddingBottom="6sp"
                android:tag="4" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="PlayerTap"
                android:paddingLeft="6sp"
                android:paddingTop="6sp"
                android:paddingRight="6sp"
                android:paddingBottom="6sp"
                android:tag="5" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="PlayerTap"
                android:paddingLeft="6sp"
                android:paddingTop="6sp"
                android:paddingRight="6sp"
                android:paddingBottom="6sp"
                android:tag="6" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="PlayerTap"
                android:paddingLeft="6sp"
                android:paddingTop="6sp"
                android:paddingRight="6sp"
                android:paddingBottom="6sp"
                android:tag="7" />

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="PlayerTap"
                android:paddingLeft="6sp"
                android:paddingTop="6sp"
                android:paddingRight="6sp"
                android:paddingBottom="6sp"
                android:tag="8" />

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/status"
        android:layout_width="396dp"
        android:layout_height="48dp"
        android:fontFamily="serif"
        android:paddingLeft="10sp"
        android:text="@string/subheading3"
        android:textSize="25sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.876" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="165dp"
        android:layout_height="30dp"
        android:paddingLeft="5sp"
        android:text="@string/subheading1"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.064"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.145" />

    <TextView
        android:id="@+id/dsf"
        android:layout_width="172dp"
        android:layout_height="31dp"
        android:paddingLeft="15sp"
        android:text="@string/subheading2"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="117dp"
        android:layout_height="52dp"
        android:onClick="reset"
        android:text="@string/reset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.534"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.952" />
</androidx.constraintlayout.widget.ConstraintLayout>